# IOC_StarMap

./: CMakeLists.txt
examples/: APPROACH_FULL_TEST.md  CMakeLists.txt  approach_full_test.cpp
examples/config_examples/: approach_full_example.json
include/starmap/catalog/: GaiaClient.h  SAOCatalog.h
src/catalog/: GaiaClient.cpp  SAOCatalog.cpp
